--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,10 @@ h1 {
     margin: 10px;
     background-color: white;
 }
+
+footer{
+    text-align: center;
+    color: white;
+    font-size:2rem;
+    
+}
