--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,8 @@ h1 {
 }
 
 footer{
-    text-align: center;
-    color: white;
-    font-size:2rem;
-    
+    text-align:center;
+    color:white;
+    font-size:1rem;
+    font-family:'Arvo';
 }
